# stretchfs-sdk

./: .jshintrc  .travis.yml  LICENSE.md  README.md  package-lock.json  package.json
C/fuse/: CMakeLists.txt  FindFUSE.cmake  curl.c  curl.h  main.c  main.cpp  memory.c  memory.h  state.c  state.h
C/fuse/include/: curl.h  curl.hpp  memory.h  memory.hpp  sfs_api.h  sfs_api.hpp  state.h  state.hpp
C/fuse/src/: curl.c  curl.cpp  memory.c  memory.cpp  sfs_api.c  sfs_api.cpp  state.c  state.cpp
helpers/: Prism.js  api.js  keygen.js  promisePipe.js
mock/: index.js
mock/helpers/: contentExists.js  purchase.js  user.js
test/: Prism.test.js  api.test.js  mock.test.js
test/helpers/: e2e.js
